<resources>
    <string name="app_name" translatable="false">Dine</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="notification">Notify</string>
    <string name="likes">Favs</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="facebook_app_id" translatable="false">440220469885998</string>
    <string name="facebook_login_protocol_name" translatable="false">fb440220469885998</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="dear">Dear</string>
    <string name="et_code">+251</string>
    <string name="wait_message">Please wait</string>
    <string name="verify">Verify</string>
    <string name="code_sent_to">Code sent to: </string>
    <string name="no_connection">No Internet Connection</string>
    <string name="arrival_count_down">It might take a while for your code to arrive. we will send you a new code in</string>
    <string name="resend">Resend</string>
    <string name="about_hodam_and_privacy">About Hodam and Privacy</string>
    <string name="start">Start</string>
    <string name="the_best_food_from_the_restaurants_nyou_love_selected_just_for_you">The best food from the restaurants  you love, selected just for you</string>
    <string name="checkout">CHECKOUT</string>
    <string name="enter_your_promo_code_here">Enter your Promo Code Here</string>
    <string name="referer_phone_number">Referer Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="name_loading">Name Loading…</string>
    <string name="description_loading">Description Loading…</string>
    <string name="see_food_comments">See Food Comments</string>
    <string name="menu">Menu</string>
    <string name="select_menu_to_add_to_cart">Select menu to add to cart</string>
    <string name="one_more_step">Great! One more step …</string>
    <string name="we_will_send_you_a_verification_code_to_verify_your_phone_number">We will send you a verification code to verify your phone number.</string>
    <string name="by_pressing_continue_you_accept_our_data_policy_cookie_use_privacy_policy_and_terms_of_service">By pressing Continue you accept our Data Policy, cookie use, Privacy Policy and Terms of Service</string>
    <string name="balance">balance: </string>
    <string name="loved">Loved</string>
    <string name="promo">Promo</string>
    <string name="more_options">More Options</string>
    <string name="setup_payment_method">Setup payment method</string>
    <string name="set_home_address">Set Delivery Address</string>
    <string name="history_and_transactions">Order History</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="having_trouble">Having trouble?</string>
    <string name="sign_in_to_hodam">Sign in to Dine</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="next">next</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="home_address">Delivery Address</string>
    <string name="transition_image" translatable="false">image</string>
    <string name="transition_description" translatable="false">description</string>
    <string name="help">Help</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="feed_back_here">Feedback here</string>
    <string name="welcome_to_dine">Welcome to Dine</string>
    <string name="phone_number_please">Phone Number Please?</string>
    <string name="and_your_name">And your Name</string>
    <string name="apply">Apply</string>
    <string name="pay_wiz_paypal">Pay With Paypal</string>
    <string name="pay_with_app_balence">Pay with app balance</string>
    <string name="cod">Pay when delivered to you</string>
    <string name="food_name">Food Name</string>
    <string name="loading">loading</string>
    <string name="call_us">Call Us</string>
    <string name="share_dine">Share Dine</string>
    <string name="restaurants_near_you">Restaurants near you</string>
    <string name="no_restaurant_around">No restaurant around</string>
    <string name="edit_profile">Edit Profile Picture?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="payments_are_disabled">Hello Cash and Amole are temporarily disabled</string>
    <string name="home_success">Home address Successfully Updated</string>
    <string name="nav_usage">Dine app navigation and usage</string>
    <string name="feedback">Feed Back</string>
    <string name="feedback_below">Type in your feedback below</string>
    <string name="feedback_success">Feedback Successfully Submitted</string>
    <string name="loading_restaurants">Loading Restaurants…</string>
    <string name="gps_disabled">GPS Disabled, Enable gps?</string>
    <string name="retry">Retry</string>
    <string name="menu_list">Menu List</string>
    <string name="your_order">Your Order</string>
    <string name="i_e_swipe_from_right_to_delete">i.e: Swipe from right to delete</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="add_a_note">Say something …</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="pay_when_delivered_to_you">Pay when delivered to you</string>
    <string name="change">Change</string>
    <string name="empty_cart">Your cart is Empty</string>
    <string name="calculating_total">Calculating Total…</string>
    <string name="confirm_order">Confirm your Order</string>
    <string name="no_enough_balance">You don\'t Have enough balance, please Choose Other Method</string>
    <string name="removed_from_cart">removed from cart!</string>
    <string name="undo">Undo</string>
    <string name="thanks_for_rating">Thanks for the rating</string>
    <string name="comments_here">Comment here</string>
    <string name="rate_this">Rate this food</string>
    <string name="submit">Submit</string>
    <string name="only_from_one">Sorry, but you can only order from one restaurant at a time</string>
    <string name="removed_from_fav">removed from favorites!</string>
    <string name="no_favourite_items_yet">No favourite items yet</string>
    <string name="no_ordered_items_yet">No ordered items yet</string>
    <string name="status">Order Status:</string>
    <string name="order_pending">Your Order is Pending</string>
    <string name="food_ordered">Your Food is Ordered</string>
    <string name="order_shipped">Food Shipped</string>
    <string name="order_delivered">Food delivered to you</string>
    <string name="delete_order">Delete Order?</string>
    <string name="cant_delete_order">Sorry, order can\'t be deleted</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="comments">Comments</string>
    <string name="processing">Processing</string>
    <string name="success">Success</string>
    <string name="blank"> </string>
    <string name="minutes_away">minutes</string>
    <string name="navigation">Navigation</string>
    <string name="list_of_restaurants_n_list_of_orders_you_make_n_search_any_food_n_profile_and_settings">❶ List of Restaurants\n❷ List of orders You make\n❸ List of the items you like\n❹ Profile and Settings</string>
    <string name="ordering_a_food">Ordering a Food</string>
    <string name="choose_a_restaurant_n_select_food_category_n_select_a_specific_food_n_go_to_checkout_ni_e_you_can_add_a_note_before_you_place_order_n_place_order_and_proceed">❶ Choose a restaurant\n❷ Select Food Category\n❸ Select a specific food\n❹ Go to Checkout\ni.e: you can add a note before you place order\n❺ Place an order and Proceed</string>
    <string name="cleaning_a_cart">Cleaning a cart</string>
    <string name="swipe_left_to_delete">Swipe left to delete</string>
    <string name="some_important_notes">Some important Notes</string>
    <string name="you_only_see_restaurants_with_in_6_km_n_orders_can_only_be_deleted_if_they_are_not_shipped_n_you_can_recommend_us_to_add_a_new_restaurant_n_send_us_a_feedback_if_you_encounter_any_inconvenience_n">◎ You only see restaurants with in 6 KM\n◎ Orders can only be deleted if they are not shipped\n◎ You can recommend us to add a new restaurant\n◎ Send us a feedback if you encounter any inconvenience\n</string>
    <string name="address_not_set_yet">Address not set yet</string>
    <string name="cont">Continue</string>
    <string name="change_language">ቋንቋ ወደ አማርኛ ይቀየር?</string>
    <string name="dine_delivery">Dine Delivery</string>
    <string name="intro_about">Whatever you want, we get it. \nDine is whatever-you-can-think-of delivery\nNeed another charger? Kitchen staples? Or Alcohol? We’ve got everything you need available for delivery within an hour.</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_statement">Dine is transforming the way goods move in Our city by enabling anyone to have anything delivered on-demand. Our revolutionary Urban Logistics platform connects customers with local couriers who can deliver anything from any store or restaurant in minutes. We empower our community to shop local with no waiting, and empower businesses through our Platform to offer delivery.</string>
    <string name="our_team">Our Team</string>
    <string name="not_yet_verification">didn\'t get the verification code yet? press resend to request a new one</string>
    <string name="cance_verification">Cancel verification process?</string>
    <string name="swipe_to_delete">Delete</string>
    <string name="change_currency">Change Currency?</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="traditional_foods">Traditional Dishes</string>
    <string name="re_order">Re-Order</string>
    <string name="order_list">Order List</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_phone">Order Phone</string>
    <string name="adress">Adress</string>
    <string name="comment">Comment</string>
    <string name="recharge_balance">Recharge Balance</string>
    <string name="order_id">Order Id:</string>
    <string name="ordered_from">Ordered from:</string>
    <string name="assigned_handler">Assigned Handler:</string>
    <string name="pending">Pending</string>
    <string name="ordered_by">Ordered by:</string>
    <string name="total_price">Total Price:</string>
    <string name="payment_state">Payment State:</string>
    <string name="failed_attempts_naccount_will_be_blocked_after_reaching_5">failed attempts, \nAccount will be blocked after reaching 5</string>
    <string name="too_many_attempts_naccount_blocked">Too Many Attempts, \nAccount Blocked!</string>
</resources>