<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/order_id"
                android:textColor="@color/colorLightBlack"
                android:textAllCaps="true"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/order_handler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/assigned_handler"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/status"
                    android:textStyle="italic" />
                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/pending"
                    android:textColor="@color/orange_active"
                    android:textStyle="italic" />

            </LinearLayout>


            <TextView
                android:id="@+id/order_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/ordered_from"
                android:textStyle="italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/order_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/ordered_by"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/total_price"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/payment_state"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:tint="@color/red_active"
            android:contentDescription="TODO"
            android:src="@drawable/ic_delete_black_24dp" />


    </LinearLayout>

</android.support.v7.widget.CardView>