<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/navigation"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/menu_help"
                android:layout_height="64dp"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/list_of_restaurants_n_list_of_orders_you_make_n_search_any_food_n_profile_and_settings"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/ordering_a_food"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/choose_a_restaurant_n_select_food_category_n_select_a_specific_food_n_go_to_checkout_ni_e_you_can_add_a_note_before_you_place_order_n_place_order_and_proceed"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/cleaning_a_cart"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/deleting"
                    android:layout_weight="2"
                    android:layout_marginLeft="8dp"
                    android:layout_height="100dp"
                    android:contentDescription="TODO" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/swipe_left_to_delete"
                    android:textSize="12sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/some_important_notes"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorLightBlack"
                android:text="@string/you_only_see_restaurants_with_in_6_km_n_orders_can_only_be_deleted_if_they_are_not_shipped_n_you_can_recommend_us_to_add_a_new_restaurant_n_send_us_a_feedback_if_you_encounter_any_inconvenience_n"
                android:textSize="12sp"/>

        </LinearLayout>
    </ScrollView>



</android.support.v7.widget.CardView>