<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    app:cardElevation="10dp"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/dine_delivery"
                android:textColor="@color/gold"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:contentDescription="TODO"
                android:src="@drawable/logo"
                android:tint="@color/gold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/intro_about"
                android:textColor="@color/gold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/our_mission"
                android:textColor="@color/gold"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/mission_statement"
                android:textColor="@color/gold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/our_team"
                android:textColor="@color/gold"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="Dine is built by a passionate team of engineers, designers, business specialists, and is headquartered in Addis Ababa."
                android:textColor="@color/gold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="App Designed and written by Kuwrom"
                android:textColor="@color/gold"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>


</android.support.v7.widget.CardView>